--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^3.4",
-        "yajra/laravel-datatables-oracle": "^9.0"
+        "yajra/laravel-datatables-oracle": "^9.0",
+        "nitmedia/wkhtml2pdf": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
